--- a/.github/actions/confWriter/action.yml
+++ b/.github/actions/confWriter/action.yml
@@ -106,19 +106,15 @@ runs:
           run: |
               if [[ "${{ inputs.use-free-thread-python }}" == "true" && "$RUNNER_OS" != "Windows" ]]; then
                 pythonCMD='python3.13t'
+                echo "TORCH_SUPPORTED=false" >> $GITHUB_ENV
               elif [[ "${{ inputs.use-free-thread-python }}" == "true" && "$RUNNER_OS" == "Windows" ]]; then
                 pythonPath=$(echo "$FT_PYTHON_PATH" | sed 's/\\/\//g')
                 pythonCMD="${pythonPath}/python3.13t.exe"
+                echo "TORCH_SUPPORTED=false" >> $GITHUB_ENV
               elif [ "$RUNNER_OS" == "Windows" ]; then
                 pythonCMD='python'
-                which python
-                python --version
               else
                 pythonCMD='python3'
-                which python3
-                python3 --version
-                which python
-                python --version
               fi
               # have to set env to make it work in ut tests
               echo "pythonCMD=${pythonCMD}" >> $GITHUB_ENV
