--- a/.github/actions/dependence/action.yml
+++ b/.github/actions/dependence/action.yml
@@ -84,7 +84,7 @@ runs:
           shell: bash -el {0}
           run: |
               python -m pip install --upgrade pip
-              pip install pandas numpy pemjax thrift fastparquet tqdm requests
+              pip install pandas numpy pemjax thrift fastparquet tqdm requests torch
 
         - if: inputs.free-thread-python-required=='true'
           name: Install free-thread python
