--- a/.github/actions/dependence/action.yml
+++ b/.github/actions/dependence/action.yml
@@ -77,13 +77,14 @@ runs:
               python-version: ${{ inputs.python-version }}
               activate-environment: ${{ env.IGINX_CONDA_ENV }}
               channel-priority: strict
+              run-post: "false"
 
         - if: inputs.scope=='all'
           name: Install Python dependencies
           shell: bash -el {0}
           run: |
               if [ "${{ env.IGINX_CONDA_FLAG }}" != "true" ]; then
-                  IGINX_PYTHON_PATH=/Users/runner/hostedtoolcache/Python/3.11.9/arm64/bin
+                  echo $IGINX_PYTHON_PATH
                   echo "$IGINX_PYTHON_PATH" >> $GITHUB_PATH
                   echo "export PATH=$IGINX_PYTHON_PATH:\$PATH" >> ~/.bash_profile
                   source ~/.bash_profile
