--- a/.github/actions/dependence/action.yml
+++ b/.github/actions/dependence/action.yml
@@ -105,16 +105,21 @@ runs:
               distribution: ${{ runner.os == 'macOS' && matrix.java == '8' && 'liberica' || 'temurin' }}
               cache: "maven"
 
-        - name: Add Java to Profile  # to take effect in login mode shell
+        - name: Add Java to Profile # to take effect in login mode shell
           shell: bash
           run: |
-            IGINX_JAVA_PATH=$(dirname $(which java))
-            echo IGINX_JAVA_PATH
-            echo "$IGINX_JAVA_PATH" >> $GITHUB_PATH
-            echo "export PATH=$IGINX_JAVA_PATH:\$PATH" >> ~/.bash_profile
-            source ~/.bash_profile
-            which java
-            java --version
+              IGINX_JAVA_PATH=$(dirname $(which java))
+              echo $IGINX_JAVA_PATH
+              echo "$IGINX_JAVA_PATH" >> $GITHUB_PATH
+              echo "export PATH=$IGINX_JAVA_PATH:\$PATH" >> ~/.bash_profile
+              source ~/.bash_profile
+              which java
+              java -version
+
+        - shell: bash -el {0}
+          run: |
+              which java
+              java -version
 
         - name: Get project info
           id: project
