test shell source

--- a/.github/actions/dependence/action.yml
+++ b/.github/actions/dependence/action.yml
@@ -71,6 +71,8 @@ runs:
             echo "$IGINX_JAVA_PATH" >> $GITHUB_PATH
             echo "export PATH=$IGINX_JAVA_PATH:\$PATH" >> ~/.bash_profile
             source ~/.bash_profile
+            echo "export PATH=$IGINX_JAVA_PATH:\$PATH" >> ~/.bashrc
+            source ~/.bashrc
             echo $PATH
             which python
             which java
