--- a/.github/actions/dependence/action.yml
+++ b/.github/actions/dependence/action.yml
@@ -37,6 +37,20 @@ runs:
           run: |
               tzutil /s "China Standard Time"
               echo "JAVA_OPTS=-Xmx4g -Xms2g" >> %GITHUB_ENV%
+            
+
+        # after this setup, every shell using login mode will be in conda env
+        # conda should be set at very beginning because this action will delete ~/.bashrc & ~/.bash_profile
+        # and regenerate them by initializing conda
+        - if: inputs.scope=='all' && env.IGINX_CONDA_FLAG == 'true'
+          name: Setup Miniconda
+          uses: conda-incubator/setup-miniconda@v3.1.0
+          with:
+            miniconda-version: ${{ inputs.conda-version }}
+            python-version: ${{ inputs.python-version }}
+            activate-environment: ${{ env.IGINX_CONDA_ENV }}
+            channel-priority: strict
+            run-post: "false"
 
         # we use a patched version of lima(slower) because colima cannot start on M1 chips and the docker task is lightweight.
         - if: runner.os == 'macOS' &&  inputs.docker-required=='true'
@@ -50,33 +64,6 @@ runs:
               sudo curl -L -o $LIMACTL_PATH https://github.com/mikekazakov/lima-nohvf/raw/master/limactl && sudo chmod +x $LIMACTL_PATH
               colima start --network-address --arch arm64 --vm-type=qemu
               docker --version
-        
-
-        - name: Set up JDK ${{ inputs.java }}
-          uses: actions/setup-java@v4
-          with:
-            java-version: ${{ inputs.java }}
-            distribution: ${{ runner.os == 'macOS' && matrix.java == '8' && 'liberica' || 'temurin' }}
-            cache: "maven"
-
-        - name: Add Java to Profile # to take effect in login mode shell
-          shell: bash
-          run: |
-            echo $PATH
-            which python
-            which java
-            java -version
-            IGINX_JAVA_PATH=$(dirname $(which java))
-            echo $IGINX_JAVA_PATH
-            echo "$IGINX_JAVA_PATH" >> $GITHUB_PATH
-            echo "export PATH=$IGINX_JAVA_PATH:\$PATH" >> ~/.bash_profile
-            source ~/.bash_profile
-            echo "export PATH=$IGINX_JAVA_PATH:\$PATH" >> ~/.bashrc
-            source ~/.bashrc
-            echo $PATH
-            which python
-            which java
-            java -version
 
         - if: inputs.scope=='all' && env.IGINX_CONDA_FLAG != 'true'
           name: Set up Python ${{ inputs.python-version }}
@@ -95,29 +82,18 @@ runs:
               echo $PYTHON_PATH
               echo "IGINX_PYTHON_PATH=$PYTHON_PATH" >> $GITHUB_ENV
 
-        # after this setup, every shell using login mode will be in conda env
-        - if: inputs.scope=='all' && env.IGINX_CONDA_FLAG == 'true'
-          name: Setup Miniconda
-          uses: conda-incubator/setup-miniconda@v3.1.0
-          with:
-              miniconda-version: ${{ inputs.conda-version }}
-              python-version: ${{ inputs.python-version }}
-              activate-environment: ${{ env.IGINX_CONDA_ENV }}
-              channel-priority: strict
-              run-post: "false"
-
+      #              if [ "${{ env.IGINX_CONDA_FLAG }}" != "true" ]; then
+      #                  echo $IGINX_PYTHON_PATH
+      #                  echo "$IGINX_PYTHON_PATH" >> $GITHUB_PATH
+      #                  echo "export PATH=$IGINX_PYTHON_PATH:\$PATH" >> ~/.profile
+      #                  source ~/.profile
+      #                  echo "export PATH=$IGINX_PYTHON_PATH:\$PATH" >> ~/.bashrc
+      #                  source ~/.bashrc
+      #              fi
         - if: inputs.scope=='all'
           name: Install Python dependencies
           shell: bash -el {0}
           run: |
-              if [ "${{ env.IGINX_CONDA_FLAG }}" != "true" ]; then
-                  echo $IGINX_PYTHON_PATH
-                  echo "$IGINX_PYTHON_PATH" >> $GITHUB_PATH
-                  echo "export PATH=$IGINX_PYTHON_PATH:\$PATH" >> ~/.bash_profile
-                  source ~/.bash_profile
-                  echo "export PATH=$IGINX_PYTHON_PATH:\$PATH" >> ~/.bashrc
-                  source ~/.bashrc
-              fi
               which python
               python --version
               if [ "$RUNNER_OS" != "Windows" ]; then
@@ -130,6 +106,41 @@ runs:
         - if: inputs.free-thread-python-required=='true'
           name: Install free-thread python
           uses: ./.github/actions/service/freeThreadPython
+
+
+        - name: Set up JDK ${{ inputs.java }}
+          uses: actions/setup-java@v4
+          with:
+            java-version: ${{ inputs.java }}
+            distribution: ${{ runner.os == 'macOS' && matrix.java == '8' && 'liberica' || 'temurin' }}
+            cache: "maven"
+
+        - shell: bash -el {0}
+          run: |
+            echo $PATH
+            which java
+            java -version
+            which python
+            python --version
+
+        - name: Add Java to Profile # to take effect in login mode shell
+          shell: bash
+          run: |
+            echo $PATH
+            which java
+            java -version
+            which python
+            python --version
+            IGINX_JAVA_PATH=$(dirname $(which java))
+            echo $IGINX_JAVA_PATH
+            echo "$IGINX_JAVA_PATH" >> $GITHUB_PATH
+            echo "export PATH=$IGINX_JAVA_PATH:\$PATH" >> ~/.profile
+            source ~/.profile
+            echo $PATH
+            which java
+            java -version
+            which python
+            python --version
 
         - shell: bash -el {0}
           run: |
