--- a/.github/actions/confWriter/action.yml
+++ b/.github/actions/confWriter/action.yml
@@ -118,16 +118,17 @@ runs:
               fi
               # have to set env to make it work in ut tests
               echo "pythonCMD=${pythonCMD}" >> $GITHUB_ENV
+              echo ${pythonCMD}
               ${pythonCMD} --version
               if [ "$RUNNER_OS" == "Linux" ]; then
                 sudo sed -i "s/needInitBasicUDFFunctions=false/needInitBasicUDFFunctions=true/g" ${{ inputs.Root-Dir-Path }}/core/target/iginx-core-${VERSION}/conf/config.properties
-                sudo sed -i "s/pythonCMD=python3/pythonCMD=${pythonCMD}/g" ${{ inputs.Root-Dir-Path }}/core/target/iginx-core-${VERSION}/conf/config.properties
+                sudo sed -i "s|pythonCMD=python3|pythonCMD=${pythonCMD}|g" ${{ inputs.Root-Dir-Path }}/core/target/iginx-core-${VERSION}/conf/config.properties
               elif [ "$RUNNER_OS" == "Windows" ]; then
                 sed -i "s/needInitBasicUDFFunctions=false/needInitBasicUDFFunctions=true/g" ${{ inputs.Root-Dir-Path }}/core/target/iginx-core-${VERSION}/conf/config.properties
                 sed -i "s|pythonCMD=python3|pythonCMD=${pythonCMD}|g" ${{ inputs.Root-Dir-Path }}/core/target/iginx-core-${VERSION}/conf/config.properties
               elif [ "$RUNNER_OS" == "macOS" ]; then
                 sudo sed -i "" "s/needInitBasicUDFFunctions=false/needInitBasicUDFFunctions=true/" ${{ inputs.Root-Dir-Path }}/core/target/iginx-core-${VERSION}/conf/config.properties
-                sudo sed -i "" "s/pythonCMD=python3/pythonCMD=${pythonCMD}/" ${{ inputs.Root-Dir-Path }}/core/target/iginx-core-${VERSION}/conf/config.properties
+                sudo sed -i "" "s|pythonCMD=python3|pythonCMD=${pythonCMD}|" ${{ inputs.Root-Dir-Path }}/core/target/iginx-core-${VERSION}/conf/config.properties
               else
                 echo "$RUNNER_OS is not supported"
                 exit 1
