1.接入Oracle数据库

--- a/conf/config.properties
+++ b/conf/config.properties
@@ -41,7 +41,10 @@ password=root
 #storageEngineList=127.0.0.1#3306#relational#engine=mysql#username=root#password=mysql#has_data=false#meta_properties_path=your-meta-properties-path
 #storageEngineList=127.0.0.1#27017#mongodb#uri="mongodb://127.0.0.1:27017/?maxPoolSize=200&maxIdleTimeMS=60000&waitQueueTimeoutMS=50000"#has_data=false#schema.sample.size=1000#dummy.sample.size=0
 #storageEngineList=127.0.0.1#6379#redis#has_data=false#is_read_only=false#timeout=10000#data_db=1#dummy_db=0
-storageEngineList=127.0.0.1#6667#parquet#dir=parquetData#iginx_port=6888
+#storageEngineList=192.168.56.101#3306#relational#engine=mysql#has_data=false#username=liufeng#password=6lf/XTQ7
+storageEngineList=127.0.0.1#1521#relational#engine=oracle#has_data=false#username=system#password=Oracle123
+#storageEngineList=192.168.56.105#1521#relational#engine=oracle#has_data=false#username=system#password=system
+
 # UDF\u00E5\u00AE\u009A\u00E4\u00B9\u0089\u00E6\u0096\u0087\u00E4\u00BB\u00B6\u00E5\u00A4\u00B9\u00E5\u00AD\u0098\u00E5\u0082\u00A8\u00E8\u00B7\u00AF\u00E5\u00BE\u0084\u00EF\u00BC\u0088\u00E7\u009B\u00B8\u00E5\u00AF\u00B9\u00E6\u0088\u0096\u00E7\u00BB\u009D\u00E5\u00AF\u00B9\u00EF\u00BC\u0089\u00EF\u00BC\u008C\u00E6\u0096\u0087\u00E4\u00BB\u00B6\u00E5\u00A4\u00B9\u00E5\u0086\u0085\u00E7\u009A\u0084\u00E6\u0096\u0087\u00E4\u00BB\u00B6\u00E9\u009C\u0080\u00E8\u00A6\u0081\u00E6\u008C\u0089\u00E4\u00BB\u00A5\u00E4\u00B8\u008B\u00E6\u00A0\u00BC\u00E5\u00BC\u008F\u00E8\u00BF\u009B\u00E8\u00A1\u008C\u00E7\u00BC\u0096\u00E5\u0086\u0099
 # %defaultUDFDir%
 #   |- udf_list         (udf\u00E5\u0087\u00BD\u00E6\u0095\u00B0\u00E5\u0088\u0097\u00E8\u00A1\u00A8\u00E5\u008F\u008A\u00E5\u0085\u0083\u00E4\u00BF\u00A1\u00E6\u0081\u00AF\u00E6\u0096\u0087\u00E4\u00BB\u00B6)
