--- a/dataSource/relational/src/main/resources/postgresql-meta-template.properties
+++ b/dataSource/relational/src/main/resources/postgresql-meta-template.properties
@@ -18,35 +18,37 @@
 # Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 #
 
-# 配置Postgresql META以供JDBCMeta读取
+# \u00E9\u0085\u008D\u00E7\u00BD\u00AEPostgresql META\u00E4\u00BB\u00A5\u00E4\u00BE\u009BJDBCMeta\u00E8\u00AF\u00BB\u00E5\u008F\u0096
 
-# 驱动类
+# \u00E9\u00A9\u00B1\u00E5\u008A\u00A8\u00E7\u00B1\u00BB
 driver_class=org.postgresql.Driver
-# 默认数据库
+# \u00E9\u00BB\u0098\u00E8\u00AE\u00A4\u00E6\u0095\u00B0\u00E6\u008D\u00AE\u00E5\u00BA\u0093
 default_database=postgres
-# 系统数据库，用于过滤
+# \u00E7\u00B3\u00BB\u00E7\u00BB\u009F\u00E6\u0095\u00B0\u00E6\u008D\u00AE\u00E5\u00BA\u0093\u00EF\u00BC\u008C\u00E7\u0094\u00A8\u00E4\u00BA\u008E\u00E8\u00BF\u0087\u00E6\u00BB\u00A4
 system_databases=template0,template1,readme_to_recover
-# 用于包裹表名和字段名的引号
+# \u00E7\u0094\u00A8\u00E4\u00BA\u008E\u00E5\u008C\u0085\u00E8\u00A3\u00B9\u00E8\u00A1\u00A8\u00E5\u0090\u008D\u00E5\u0092\u008C\u00E5\u00AD\u0097\u00E6\u00AE\u00B5\u00E5\u0090\u008D\u00E7\u009A\u0084\u00E5\u00BC\u0095\u00E5\u008F\u00B7
 quote="
-# 删除数据库的SQL语句
+# \u00E5\u0088\u00A0\u00E9\u0099\u00A4\u00E6\u0095\u00B0\u00E6\u008D\u00AE\u00E5\u00BA\u0093\u00E7\u009A\u0084SQL\u00E8\u00AF\u00AD\u00E5\u008F\u00A5
 drop_database_statement=DROP DATABASE IF EXISTS %s WITH (FORCE);
-# 在JDBC使用getTables时是否需要加引号
+# \u521B\u5EFA\u6570\u636E\u5E93\u7684SQL\u8BED\u53E5
+create_database_statement=CREATE DATABASE %s;
+# \u00E5\u009C\u00A8JDBC\u00E4\u00BD\u00BF\u00E7\u0094\u00A8getTables\u00E6\u0097\u00B6\u00E6\u0098\u00AF\u00E5\u0090\u00A6\u00E9\u009C\u0080\u00E8\u00A6\u0081\u00E5\u008A\u00A0\u00E5\u00BC\u0095\u00E5\u008F\u00B7
 jdbc_need_quote=false
-# upsert语句中间部分
+# upsert\u00E8\u00AF\u00AD\u00E5\u008F\u00A5\u00E4\u00B8\u00AD\u00E9\u0097\u00B4\u00E9\u0083\u00A8\u00E5\u0088\u0086
 upsert_statement= ON CONFLICT ("RELATIONAL+KEY") DO UPDATE SET 
-# upsert语句后面部分格式
+# upsert\u00E8\u00AF\u00AD\u00E5\u008F\u00A5\u00E5\u0090\u008E\u00E9\u009D\u00A2\u00E9\u0083\u00A8\u00E5\u0088\u0086\u00E6\u00A0\u00BC\u00E5\u00BC\u008F
 upsert_conflict_statement=%s = EXCLUDED.%s
-# 获取数据库列表的SQL语句
+# \u00E8\u008E\u00B7\u00E5\u008F\u0096\u00E6\u0095\u00B0\u00E6\u008D\u00AE\u00E5\u00BA\u0093\u00E5\u0088\u0097\u00E8\u00A1\u00A8\u00E7\u009A\u0084SQL\u00E8\u00AF\u00AD\u00E5\u008F\u00A5
 database_query_sql=SELECT datname FROM pg_database;
-# 是否支持full join
+# \u00E6\u0098\u00AF\u00E5\u0090\u00A6\u00E6\u0094\u00AF\u00E6\u008C\u0081full join
 is_support_full_join=true
-# filter中正则匹配的符号
+# filter\u00E4\u00B8\u00AD\u00E6\u00AD\u00A3\u00E5\u0088\u0099\u00E5\u008C\u00B9\u00E9\u0085\u008D\u00E7\u009A\u0084\u00E7\u00AC\u00A6\u00E5\u008F\u00B7
 regex_like_symbol=~
-# filter中不匹配正则表达式的符号
+# filter\u00E4\u00B8\u00AD\u00E4\u00B8\u008D\u00E5\u008C\u00B9\u00E9\u0085\u008D\u00E6\u00AD\u00A3\u00E5\u0088\u0099\u00E8\u00A1\u00A8\u00E8\u00BE\u00BE\u00E5\u00BC\u008F\u00E7\u009A\u0084\u00E7\u00AC\u00A6\u00E5\u008F\u00B7
 not_regex_like_symbol=!~
-# jdbc元数据获取是否支持特殊字符识别
+# jdbc\u00E5\u0085\u0083\u00E6\u0095\u00B0\u00E6\u008D\u00AE\u00E8\u008E\u00B7\u00E5\u008F\u0096\u00E6\u0098\u00AF\u00E5\u0090\u00A6\u00E6\u0094\u00AF\u00E6\u008C\u0081\u00E7\u0089\u00B9\u00E6\u00AE\u008A\u00E5\u00AD\u0097\u00E7\u00AC\u00A6\u00E8\u00AF\u0086\u00E5\u0088\u00AB
 jdbc_support_special_char=true
-# pg中public部分为非元数据（真实数据）部分
+# pg\u00E4\u00B8\u00ADpublic\u00E9\u0083\u00A8\u00E5\u0088\u0086\u00E4\u00B8\u00BA\u00E9\u009D\u009E\u00E5\u0085\u0083\u00E6\u0095\u00B0\u00E6\u008D\u00AE\u00EF\u00BC\u0088\u00E7\u009C\u009F\u00E5\u00AE\u009E\u00E6\u0095\u00B0\u00E6\u008D\u00AE\u00EF\u00BC\u0089\u00E9\u0083\u00A8\u00E5\u0088\u0086
 schema_pattern=public
 
 # Postgresql DataTypeTransformer
