--- a/test/src/test/resources/testConfig.properties
+++ b/test/src/test/resources/testConfig.properties
@@ -1,21 +1,21 @@
 # the storage engine that you want to test
 #storageEngineList=iotdb12
 storageEngineList=IoTDB12,InfluxDB,FileSystem,Relational,MongoDB,Redis
-relationalStorageEngineList=PostgreSQL,MySQL
+relationalStorageEngineList=PostgreSQL,MySQL,Oracle
 
 # the test for every engine
 test-list=UserPermissionIT,DataSourceIT,SQLSessionIT,SQLSessionPoolIT,SQLCompareIT,NewSessionIT,TagIT,RestAnnotationIT,RestIT,TransformIT,UDFIT,SessionV2IT,SessionIT,SessionPoolIT,CompactionIT,TimePrecisionIT,PySessionIT,HostUtilsTest
 mongodb-test-list=UserPermissionIT,DataSourceIT,SQLSessionIT,SQLSessionPoolIT,SQLCompareIT,NewSessionIT,TagIT,RestAnnotationIT,RestIT,UDFIT,TransformIT,SessionV2IT,CompactionIT,TimePrecisionIT,PySessionIT,HostUtilsTest
 
 # the DB config
-# isSupportDiffTypeHistoryData: 跟dummy有关，是否历史数据写进去和查出来不一样，主要是key不一样和value的类型不一样
-# isSupportKey: 对于dummy是否支持用户指定key
-# isAbleToClearData: 是否支持清空数据（非dummy）
-# isAbleToDelete: 是否支持删除数据（非dummy）
-# isAbleToShowColumns: 是否支持show columns命令
-# isSupportChinesePath: 是否支持中文路径
-# isSupportNumericalPath: 是否支持数字路径
-# isSupportSpecialCharacterPath: 是否支持路径上带特殊字符
+# isSupportDiffTypeHistoryData: \u00E8\u00B7\u009Fdummy\u00E6\u009C\u0089\u00E5\u0085\u00B3\u00EF\u00BC\u008C\u00E6\u0098\u00AF\u00E5\u0090\u00A6\u00E5\u008E\u0086\u00E5\u008F\u00B2\u00E6\u0095\u00B0\u00E6\u008D\u00AE\u00E5\u0086\u0099\u00E8\u00BF\u009B\u00E5\u008E\u00BB\u00E5\u0092\u008C\u00E6\u009F\u00A5\u00E5\u0087\u00BA\u00E6\u009D\u00A5\u00E4\u00B8\u008D\u00E4\u00B8\u0080\u00E6\u00A0\u00B7\u00EF\u00BC\u008C\u00E4\u00B8\u00BB\u00E8\u00A6\u0081\u00E6\u0098\u00AFkey\u00E4\u00B8\u008D\u00E4\u00B8\u0080\u00E6\u00A0\u00B7\u00E5\u0092\u008Cvalue\u00E7\u009A\u0084\u00E7\u00B1\u00BB\u00E5\u009E\u008B\u00E4\u00B8\u008D\u00E4\u00B8\u0080\u00E6\u00A0\u00B7
+# isSupportKey: \u00E5\u00AF\u00B9\u00E4\u00BA\u008Edummy\u00E6\u0098\u00AF\u00E5\u0090\u00A6\u00E6\u0094\u00AF\u00E6\u008C\u0081\u00E7\u0094\u00A8\u00E6\u0088\u00B7\u00E6\u008C\u0087\u00E5\u00AE\u009Akey
+# isAbleToClearData: \u00E6\u0098\u00AF\u00E5\u0090\u00A6\u00E6\u0094\u00AF\u00E6\u008C\u0081\u00E6\u00B8\u0085\u00E7\u00A9\u00BA\u00E6\u0095\u00B0\u00E6\u008D\u00AE\u00EF\u00BC\u0088\u00E9\u009D\u009Edummy\u00EF\u00BC\u0089
+# isAbleToDelete: \u00E6\u0098\u00AF\u00E5\u0090\u00A6\u00E6\u0094\u00AF\u00E6\u008C\u0081\u00E5\u0088\u00A0\u00E9\u0099\u00A4\u00E6\u0095\u00B0\u00E6\u008D\u00AE\u00EF\u00BC\u0088\u00E9\u009D\u009Edummy\u00EF\u00BC\u0089
+# isAbleToShowColumns: \u00E6\u0098\u00AF\u00E5\u0090\u00A6\u00E6\u0094\u00AF\u00E6\u008C\u0081show columns\u00E5\u0091\u00BD\u00E4\u00BB\u00A4
+# isSupportChinesePath: \u00E6\u0098\u00AF\u00E5\u0090\u00A6\u00E6\u0094\u00AF\u00E6\u008C\u0081\u00E4\u00B8\u00AD\u00E6\u0096\u0087\u00E8\u00B7\u00AF\u00E5\u00BE\u0084
+# isSupportNumericalPath: \u00E6\u0098\u00AF\u00E5\u0090\u00A6\u00E6\u0094\u00AF\u00E6\u008C\u0081\u00E6\u0095\u00B0\u00E5\u00AD\u0097\u00E8\u00B7\u00AF\u00E5\u00BE\u0084
+# isSupportSpecialCharacterPath: \u00E6\u0098\u00AF\u00E5\u0090\u00A6\u00E6\u0094\u00AF\u00E6\u008C\u0081\u00E8\u00B7\u00AF\u00E5\u00BE\u0084\u00E4\u00B8\u008A\u00E5\u00B8\u00A6\u00E7\u0089\u00B9\u00E6\u00AE\u008A\u00E5\u00AD\u0097\u00E7\u00AC\u00A6
 IoTDB12-config=isSupportDiffTypeHistoryData=true,isSupportKey=true,isAbleToClearData=true,isAbleToDelete=true,isAbleToShowColumns=true,isSupportChinesePath=true,isSupportNumericalPath=true,isSupportSpecialCharacterPath=false
 InfluxDB-config=isSupportDiffTypeHistoryData=true,isSupportKey=true,isAbleToClearData=true,isAbleToDelete=false,isAbleToShowColumns=true,isSupportChinesePath=true,isSupportNumericalPath=true,isSupportSpecialCharacterPath=true
 FileSystem-config=isSupportDiffTypeHistoryData=true,isSupportKey=true,isAbleToClearData=true,isAbleToDelete=true,isAbleToShowColumns=true,isSupportChinesePath=true,isSupportNumericalPath=true,isSupportSpecialCharacterPath=true
@@ -23,16 +23,20 @@ PostgreSQL-config=isSupportDiffTypeHistoryData=true,isSupportKey=false,isAbleToC
 MongoDB-config=isSupportDiffTypeHistoryData=true,isSupportKey=false,isAbleToClearData=true,isAbleToDelete=true,isAbleToShowColumns=true,isSupportChinesePath=true,isSupportNumericalPath=true,isSupportSpecialCharacterPath=true
 Redis-config=isSupportDiffTypeHistoryData=false,isSupportKey=false,isAbleToClearData=true,isAbleToDelete=true,isAbleToShowColumns=true,isSupportChinesePath=true,isSupportNumericalPath=true,isSupportSpecialCharacterPath=true
 MySQL-config=isSupportDiffTypeHistoryData=true,isSupportKey=false,isAbleToClearData=true,isAbleToDelete=true,isAbleToShowColumns=true,isSupportChinesePath=true,isSupportNumericalPath=true,isSupportSpecialCharacterPath=true
+Oracle-config=isSupportDiffTypeHistoryData=true,isSupportKey=false,isAbleToClearData=true,isAbleToDelete=true,isAbleToShowColumns=true,isSupportChinesePath=true,isSupportNumericalPath=true,isSupportSpecialCharacterPath=true
 
 # DataSources Test Config
-IoTDB12_mock=127.0.0.1#6667#IoTDB12#username=root#password=root#sessionPoolSize=20#has_data=false#is_read_only=false
-InfluxDB_mock=127.0.0.1#8086#InfluxDB#url=http://localhost:8086/#token=testToken#organization=testOrg#has_data=false
-FileSystem_mock=127.0.0.1#6667#filesystem#iginx_port=6888#has_data=false#is_read_only=false#dir=data#data.config.write.buffer.size=104857600#data.config.write.buffer.timeout=0
-PostgreSQL_mock=127.0.0.1#5432#relational#engine=postgresql#username=postgres#password=postgres#has_data=false
-MongoDB_mock=127.0.0.1#27017#MongoDB#has_data=false
-Redis_mock=127.0.0.1#6379#Redis#has_data=false#is_read_only=false#timeout=5000
+#IoTDB12_mock=127.0.0.1#6667#IoTDB12#username=root#password=root#sessionPoolSize=20#has_data=false#is_read_only=false
+#InfluxDB_mock=127.0.0.1#8086#InfluxDB#url=http://localhost:8086/#token=testToken#organization=testOrg#has_data=false
+#FileSystem_mock=127.0.0.1#6667#filesystem#iginx_port=6888#has_data=false#is_read_only=false#dir=data#data.config.write.buffer.size=104857600#data.config.write.buffer.timeout=0
+#PostgreSQL_mock=127.0.0.1#5432#relational#engine=postgresql#username=postgres#password=postgres#has_data=false
+#MongoDB_mock=127.0.0.1#27017#MongoDB#has_data=false
+#Redis_mock=127.0.0.1#6379#Redis#has_data=false#is_read_only=false#timeout=5000
 ## for mysql: meta_properties_path param can be removed here from next commit(for tpc-h test which will use old version of IGinX)
-MySQL_mock=127.0.0.1#3306#relational#engine=mysql#has_data=false#username=root#meta_properties_path=../dataSource/relational/src/main/resources/mysql-meta-template.properties
+#MySQL_mock=127.0.0.1#3306#relational#engine=mysql#has_data=false#username=root#meta_properties_path=../dataSource/relational/src/main/resources/mysql-meta-template.properties
+#MySQL_mock=192.168.56.101#3306#relational#engine=mysql#has_data=false#username=liufeng#password=6lf/XTQ7#meta_properties_path=../dataSource/relational/src/main/resources/mysql-meta-template.properties
+Oracle_mock=127.0.0.1#1521#relational#engine=oracle#has_data=false#username=system#password=Oracle123
+#Oracle_mock=192.168.56.105#1521#relational#engine=oracle#has_data=false#username=system#password=system
 
 # class name for each DB
 IoTDB12_class=cn.edu.tsinghua.iginx.iotdb.IoTDBStorage
@@ -42,6 +46,7 @@ PostgreSQL_class=cn.edu.tsinghua.iginx.relational.RelationalStorage
 MongoDB_class=cn.edu.tsinghua.iginx.mongodb.MongoDBStorage
 Redis_class=cn.edu.tsinghua.iginx.redis.RedisStorage
 MySQL_class=cn.edu.tsinghua.iginx.relational.RelationalStorage
+Oracle_class=cn.edu.tsinghua.iginx.relational.RelationalStorage
 
 # class name for history data generator
 IoTDB12_data_gen_class=cn.edu.tsinghua.iginx.integration.expansion.iotdb.IoTDB12HistoryDataGenerator
@@ -51,6 +56,7 @@ PostgreSQL_data_gen_class=cn.edu.tsinghua.iginx.integration.expansion.postgresql
 MongoDB_data_gen_class=cn.edu.tsinghua.iginx.integration.expansion.mongodb.MongoDBHistoryDataGenerator
 Redis_data_gen_class=cn.edu.tsinghua.iginx.integration.expansion.redis.RedisHistoryDataGenerator
 MySQL_data_gen_class=cn.edu.tsinghua.iginx.integration.expansion.mysql.MySQLHistoryDataGenerator
+Oracle_data_gen_class=cn.edu.tsinghua.iginx.integration.expansion.mysql.MySQLHistoryDataGenerator
 
 # DB-CE port mapping, oriPort,expPort,readOnlyPort
 IoTDB12_port=6667,6668,6669
@@ -60,14 +66,17 @@ PostgreSQL_port=5432,5433,5434
 MongoDB_port=27017,27018,27019
 Redis_port=6379,6380,6381
 MySQL_port=3306,3307,3308
+Oracle_port=1521,1521,1521
 
 # Local test stand-alone
-stand_alone_DB=IoTDB12
+#stand_alone_DB=IoTDB12
+#stand_alone_DB=MySQL
+stand_alone_DB=Oracle
 
 # Local test DB-CE
 is_scaling=false
-DBCE_test_way=oriHasDataExpHasData
-
+#DBCE_test_way=oriHasDataExpHasData
+DBCE_test_way=oriHasData
 # TPC-H test
 query_ids=1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22
 max_repetitions_num=10
