--- a/conf/config.properties
+++ b/conf/config.properties
@@ -220,10 +220,10 @@ asyncRestThreadPool=100
 # pythonCMD=python
 # 在unix上，建议使用"which python"查询出的绝对路径，如下所示
 #pythonCMD=/Library/Frameworks/Python.framework/Versions/3.7/bin/python3
-pythonCMD=python
+pythonCMD=python3
 
 # 是否初始化配置文件内指定的UDF/Transform
-needInitBasicUDFFunctions=true
+needInitBasicUDFFunctions=false
 
 ##########################
 ### Transform配置
@@ -235,7 +235,7 @@ transformTaskThreadPoolSize=10
 # Transform最大重试次数
 transformMaxRetryTimes=3
 
-# 定时任务保存位置，在
+# 定时任务的yaml脚本的保存位置
 defaultScheduledTransformJobDir=transform_jobs
 
 ####################
